--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ncdai/react-wheel-picker": "^1.0.15",
+    "framer-motion": "^12.23.12",
     "jotai": "^2.13.0",
     "next": "15.4.2",
     "react": "19.1.0",
