--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ncdai/react-wheel-picker": "^1.0.15",
     "framer-motion": "^12.23.12",
     "jotai": "^2.13.0",
     "next": "15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-mobile-picker": "^1.2.0",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
