--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.85.5",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "jotai": "^2.13.0",
